syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "Fase5grpc";

package br.com.zup;

import "google/protobuf/timestamp.proto";

service Fase5grpcService {
  rpc cadastra (Fase5grpcRequest) returns (Fase5grpcReply) {}
}

enum Cargo {
  DEV = 0;
  QA = 1;
  GERENTE = 2;
}

message Endereco {
  string logradouro = 1;
  string cep = 2;
  string complemento = 3;
}

message Fase5grpcRequest {
  string name = 1;
  string cpf = 2;
  int32 idade = 3;
  double salario = 4;
  bool ativo = 5;
  Cargo cargo = 6;
  repeated Endereco enderecos = 7;
}

message Fase5grpcReply {
  string message = 1;
  google.protobuf.Timestamp criadoEm = 2;
}